--- a/me.html
+++ b/me.html
@@ -527,7 +527,7 @@
         <div class="hero-card">
           <div class="profile-card">
             <div class="profile-top">
-              <div class="profile-avatar">R</div>
+              <div class="profile-avatar">S</div>
               <div>
                 <p class="profile-name">Sayan Abdilla</p>
                 <p class="profile-meta">Бастау-2 мектебі • Киберқауіпсіздік, 2027</p>
@@ -540,7 +540,7 @@
               </div>
               <div>
                 <p class="detail-label">ҰБТ</p>
-                <p class="detail-value">100/140</p>
+                <p class="detail-value">106/140</p>
               </div>
               <div>
                 <p class="detail-label">Бағыт</p>
@@ -571,7 +571,7 @@
 
       <section class="highlights" id="highlights" data-animate>
         <div class="highlight-card">
-          <p class="highlight-number">100/140</p>
+          <p class="highlight-number">106/140</p>
           <p class="highlight-title">ҰБТ нәтижесі</p>
           <p class="highlight-body">Ұлттық бірыңғай тестілеу.</p>
         </div>
@@ -751,3 +751,4 @@
     </script>
   </body>
 </html>
+
